conexión con BD SQL Server y prueba de mapeo de entity

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=xxx; Password=xxx;Initial Catalog=xxx;Data Source=localhost;timeout=40;Pooling=False;Connection Lifetime=1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
