--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,9 @@
 {
   "AppSettings": {
-    "Secret": "4*u{!oiC(O:C$KLU}=+a|?no,;KmpE"
+    "Secret": "4*u{!oiC(O:C$KLU}=+a|?no,;KmpE",
+    "Cors.AllowedOrigins": "*",
+    "Cors.AllowedMethods": "*",
+    "Cors.AllowedHeaders": "*"
   },
   "Logging": {
     "LogLevel": {
