Parametrización de CORS y filtrado de passwords y tokens en los logs parametrizable

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,9 +1,12 @@
 {
   "AppSettings": {
     "Secret": "4*u{!oiC(O:C$KLU}=+a|?no,;KmpE",
-    "Cors.AllowedOrigins": "*",
-    "Cors.AllowedMethods": "*",
-    "Cors.AllowedHeaders": "*"
+    "CorsAllowedOrigins": "*",
+    "CorsAllowedMethods": "*",
+    "CorsAllowedHeaders": "*",
+    "SessionTimeoutInSeconds": 36000,
+    "LogShowPassword": "true",
+    "LogShowToken": "true"
   },
   "Logging": {
     "LogLevel": {
