cambios para meter swagger

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -4,9 +4,18 @@
     "CorsAllowedOrigins": "*",
     "CorsAllowedMethods": "*",
     "CorsAllowedHeaders": "*",
-    "SessionTimeoutInSeconds": 36000,
+    "SessionTimeoutInSeconds": 3605,
     "LogShowPassword": "true",
-    "LogShowToken": "true"
+    "LogShowToken": "true",
+    "SwaggerDocInfoVersion": "v1",
+    "SwaggerDocInfoTitle": "NeXT WebAPI",
+    "SwaggerDocInfoDescription": "WebAPI of NeXT",
+    "SwaggerDocInfoTermsOfService": "NeXT Opensource",
+    "SwaggerDocInfoContactName": "",
+    "SwaggerDocInfoContactEmail": "next@openfinance.es",
+    "SwaggerDocInfoContactUrl": "",
+    "SwaggerEndPointJsonUrl": "/swagger/v1/swagger.json",
+    "SwaggerEndPointTitle": "NeXT Api V1.0"
   },
   "Logging": {
     "LogLevel": {
