Registro de sesiones de usuario. Configuración en autenticado de: - Una sesión o varias por usuario - Validación de IP - Validación de contraseña de usuario cambiada Actualización de último acceso y validación de sesión caducada

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -4,7 +4,7 @@
     "CorsAllowedOrigins": "*",
     "CorsAllowedMethods": "*",
     "CorsAllowedHeaders": "*",
-    "SessionTimeoutInSeconds": 3605,
+    "SessionTimeoutInSeconds": 900,
     "LogShowPassword": "true",
     "LogShowToken": "true",
     "SwaggerDocInfoVersion": "v1",
@@ -15,7 +15,10 @@
     "SwaggerDocInfoContactEmail": "next@openfinance.es",
     "SwaggerDocInfoContactUrl": "",
     "SwaggerEndPointJsonUrl": "/swagger/v1/swagger.json",
-    "SwaggerEndPointTitle": "NeXT Api V1.0"
+    "SwaggerEndPointTitle": "NeXT Api V1.0",
+    "AuthValidateIP": "false",
+    "AuthValidateChangedPass": "false",
+    "AuthAllowMultipleSessionsPerUser": "false"
   },
   "Logging": {
     "LogLevel": {
